--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>AJ's Por</title>
+        <title>AJ's Portfolio</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -33,8 +33,8 @@
         <!-- Header-->
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
-                <h1 class="mb-1">Stylish Portfolio</h1>
-                <h3 class="mb-5"><em>A Free Bootstrap Theme by Start Bootstrap</em></h3>
+                <h1 class="mb-1">AJ's Portfolio</h1>
+                <h3 class="mb-5"><em>A quick introduction to my services and skillset. </em></h3>
                 <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
             </div>
         </header>
@@ -59,38 +59,37 @@
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading">
                     <h3 class="text-secondary mb-0">Services</h3>
-                    <h2 class="mb-5">What We Offer</h2>
+                    <h2 class="mb-5">What I Offer</h2>
                 </div>
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-smartphone"></i></span>
-                        <h4><strong>Responsive</strong></h4>
-                        <p class="text-faded mb-0">Looks great on any screen size!</p>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-paper-plane"></i></span>
+                        <h4><strong>Web Developement </strong></h4>
+                        <p class="text-faded mb-0">Building reliable, adaptable web applications with up-to-date technologies across the full stack.</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-pencil"></i></span>
-                        <h4><strong>Redesigned</strong></h4>
-                        <p class="text-faded mb-0">Freshly redesigned for Bootstrap 5.</p>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-desktop"></i></span>
+                        <h4><strong></strong>Application Developement</h4>
+                        <p class="text-faded mb-0">Developing full-stack apps that are powerful, versatile, and built with modern technology.</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-like"></i></span>
-                        <h4><strong>Favorited</strong></h4>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-camera"></i></span>
+                        <h4><strong>Photography and Videography </strong></h4>
                         <p class="text-faded mb-0">
-                            Millions of users
+                            Turning your special moments into lasting memories 
                             <i class="fas fa-heart"></i>
-                            Start Bootstrap!
                         </p>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i></span>
-                        <h4><strong>Question</strong></h4>
-                        <p class="text-faded mb-0">I mustache you a question...</p>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-wrench"></i></span>
+                        <h4><strong>Support Specialist</strong></h4>
+                        <p class="text-faded mb-0">Delivering expert technical support to keep your pages, apps, and systems running smoothly.</p>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Callout-->
-        <section class="callout">
+        <!-- <section class="callout">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mx-auto mb-5">
                     Welcome to
@@ -99,7 +98,7 @@
                 </h2>
                 <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/theme/stylish-portfolio/">Download Now!</a>
             </div>
-        </section>
+        </section> -->
         <!-- Portfolio-->
         <section class="content-section" id="portfolio">
             <div class="container px-4 px-lg-5">
@@ -109,14 +108,14 @@
                 </div>
                 <div class="row gx-0">
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://jsfiddle.net/Celirous/vrb8Lhqm/2/" target="_blank">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Stationary</div>
-                                    <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                                    <div class="h2" color="black">Shopping Cart</div>
+                                    <p class="mb-0">This is a small program that will help you work out the cost of your shopping list!</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="..." />
+                            <img class="img-fluid-shoppinglist" src="assets/img/Projects_img/high-angle-plant-notebook-frame.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
