--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>AJ's Portfolio</title>
+        <title>AJ's Bellringer</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -22,7 +22,7 @@
         <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
         <nav id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <li class="sidebar-brand"><a href="#page-top">Start Bootstrap</a></li>
+                <li class="sidebar-brand"><a href="#page-top">Back to top</a></li>
                 <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
                 <li class="sidebar-nav-item"><a href="#about">About</a></li>
                 <li class="sidebar-nav-item"><a href="#services">Services</a></li>
@@ -33,7 +33,7 @@
         <!-- Header-->
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
-                <h1 class="mb-1">AJ's Portfolio</h1>
+                <h1 class="mb-1">AJ Bellringer</h1>
                 <h3 class="mb-5"><em>A quick introduction to my services and skillset. </em></h3>
                 <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
             </div>
@@ -43,11 +43,14 @@
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
+                        <h2>About me!</h2>
                         <p class="lead mb-5">
-                            This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-                            <a href="https://unsplash.com/">Unsplash</a>
-                            !
+                            Dynamic and resourceful professional with proven strengths in customer support, IT troubleshooting, and administrative coordination. Highly rated
+                            for support performance (4.1/5 avg.) across multiple international remote support teams. Adaptable, self-motivated, and naturally collaborative —
+                            thrives in both remote and onsite environments. A fast learner with leadership experience and a passion for efficiency, team success, and client
+                            satisfaction. Known for exceptional independent research skills and the ability to solve problems without supervision.
+                            <!-- <a href="https://unsplash.com/">Unsplash</a>
+                            ! -->
                         </p>
                         <a class="btn btn-dark btn-xl" href="#services">What We Offer</a>
                     </div>
@@ -119,55 +122,116 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://jsfiddle.net/Celirous/8wu49h5m/3/" target="_blank">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Ice Cream</div>
-                                    <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                                    <div class="h2">Guessing Game</div>
+                                    <p class="mb-0">A simple game where you need to guess the secret number!</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="..." />
+                            <img class="img-fluid-guessing" src="assets/img/Projects_img/edited.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://jsfiddle.net/Celirous/uofLy654/4/" target="_blank">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Strawberries</div>
-                                    <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                                    <div class="h2">Adlibz Game</div>
+                                    <p class="mb-0">A fun adlibz game that you can enjoy with your friends and family.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="..." />
+                            <img class="img-fluid-adlibz" src="assets/img/Projects_img/adlibz darker blue.png" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://jsfiddle.net/Celirous/gr6y2km5/1/">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Workspace</div>
-                                    <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                                    <div class="h2">Dancing Robot</div>
+                                    <p class="mb-0">Basic internactive robot that moves when you click on certain spots.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
+                            <img class="img-fluid-bot" src="assets/img/Projects_img/yellow bot.png" alt="..." />
+                        </a>
+                    </div>
+                    <div class="col-lg-6">
+                        <a class="portfolio-item" href="https://jsfiddle.net/Celirous/3gfcrzh1/1/" target="_blank">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <div class="h2">Pizzaria</div>
+                                    <p class="mb-0">This is a nice order calulator for your pizza order and delvery amount</p>
+                                </div>
+                            </div>
+                            <img class="img-fluid-lemonade" src="assets/img/Projects_img/pizza.png" alt="..." />
+                        </a>
+                    </div>
+                                        <div class="col-lg-6">
+                        <a class="portfolio-item" href="https://jsfiddle.net/Celirous/mkr8bdwo/6/" target="_blank">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <div class="h2">Lemoande Stand</div>
+                                    <p class="mb-0">This program pulls the weather for you and helps you calculate the amonth of lemonade you can sell on that week!</p>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/Projects_img/blue lemonade stand.png" alt="..." />
                         </a>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Call to Action-->
-        <section class="content-section bg-primary text-white">
+        <!-- <section class="content-section bg-primary text-white">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mb-4">The buttons below are impossible to resist...</h2>
                 <a class="btn btn-xl btn-light me-4" href="#!">Click Me!</a>
                 <a class="btn btn-xl btn-dark" href="#!">Look at Me!</a>
             </div>
-        </section>
+        </section> -->
         <!-- Map-->
         <div class="map" id="contact">
-            <iframe src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3584.756582763818!2d28.071856911745076!3d-26.041519377082047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e957249ce6533d3%3A0x6a48ef4b0f0b8601!2sCode%20College!5e0!3m2!1sen!2sza!4v1760432530450!5m2!1sen!2sza"></iframe>
             <br />
-            <small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a></small>
+            <small><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3584.756582763818!2d28.071856911745076!3d-26.041519377082047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e957249ce6533d3%3A0x6a48ef4b0f0b8601!2sCode%20College!5e0!3m2!1sen!2sza!4v1760432530450!5m2!1sen!2sza"></a></small>
         </div>
+
+
+ <!-- <div class="container px-5 my-5">
+    <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+        <div class="form-floating mb-3">
+            <input class="form-control" id="nameAndSurname" type="text" placeholder="Name and Surname " data-sb-validations="required" />
+            <label for="nameAndSurname">Name and Surname </label>
+            <div class="invalid-feedback" data-sb-feedback="nameAndSurname:required">Name and Surname is required.</div>
+        </div>
+        <div class="form-floating mb-3">
+            <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" data-sb-validations="required,email" />
+            <label for="emailAddress">Email Address</label>
+            <div class="invalid-feedback" data-sb-feedback="emailAddress:required">Email Address is required.</div>
+            <div class="invalid-feedback" data-sb-feedback="emailAddress:email">Email Address Email is not valid.</div>
+        </div>
+        <div class="form-floating mb-3">
+            <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;" data-sb-validations="required"></textarea>
+            <label for="message">Message</label>
+            <div class="invalid-feedback" data-sb-feedback="message:required">Message is required.</div>
+        </div>
+        <div class="d-none" id="submitSuccessMessage">
+            <div class="text-center mb-3">
+                <div class="fw-bolder">Form submission successful!</div>
+                <p>To activate this form, sign up at</p>
+                <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+            </div>
+        </div>
+        <div class="d-none" id="submitErrorMessage">
+            <div class="text-center text-danger mb-3">Error sending message!</div>
+        </div>
+        <div class="d-grid">
+            <button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button>
+        </div>
+    </form>
+</div>
+<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
+
+
+
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container px-4 px-lg-5">
