--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                     <p class="mb-0">This is a small program that will help you work out the cost of your shopping list!</p>
                                 </div>
                             </div>
-                            <img class="img-fluid-shoppinglist" src="assets/img/Projects_img/high-angle-plant-notebook-frame.jpg" alt="..." />
+                            <img class="img-fluid-shoppinglist" src="assets/img/Projects_img/new wishlist.png" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -233,7 +233,7 @@
 
 
         <!-- Footer-->
-        <footer class="footer text-center">
+        <!-- <footer class="footer text-center">
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
@@ -248,8 +248,8 @@
                 </ul>
                 <p class="text-muted small mb-0">Copyright &copy; Your Website 2023</p>
             </div>
-        </footer>
-        <!-- Scroll to Top Button-->
+        </footer> -->
+        <!-- Scroll to Top Button -->
         <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
