--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                             Dynamic and resourceful professional with proven strengths in customer support, IT troubleshooting, and administrative coordination. Highly rated
                             for support performance (4.1/5 avg.) across multiple international remote support teams. Adaptable, self-motivated, and naturally collaborative —
                             thrives in both remote and onsite environments. A fast learner with leadership experience and a passion for efficiency, team success, and client
-                            satisfaction. Known for exceptional independent research skills and the ability to solve problems without supervision.
+                            satisfaction. Known for exceptional research skills and the ability to work independently to solve problems.
                             <!-- <a href="https://unsplash.com/">Unsplash</a>
                             ! -->
                         </p>
-                        <a class="btn btn-dark btn-xl" href="#services">What We Offer</a>
+                        <a class="btn btn-dark btn-xl" href="#services">What I Offer</a>
                     </div>
                 </div>
             </div>
@@ -67,12 +67,12 @@
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-paper-plane"></i></span>
-                        <h4><strong>Web Developement </strong></h4>
+                        <h4><strong>Web Developemnt </strong></h4>
                         <p class="text-faded mb-0">Building reliable, adaptable web applications with up-to-date technologies across the full stack.</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-desktop"></i></span>
-                        <h4><strong></strong>Application Developement</h4>
+                        <h4><strong></strong>Application Development</h4>
                         <p class="text-faded mb-0">Developing full-stack apps that are powerful, versatile, and built with modern technology.</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
@@ -148,7 +148,7 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">Dancing Robot</div>
-                                    <p class="mb-0">Basic internactive robot that moves when you click on certain spots.</p>
+                                    <p class="mb-0">Basic interactive robot that moves when you click on certain spots.</p>
                                 </div>
                             </div>
                             <img class="img-fluid-bot" src="assets/img/Projects_img/yellow bot.png" alt="..." />
@@ -158,8 +158,8 @@
                         <a class="portfolio-item" href="https://jsfiddle.net/Celirous/3gfcrzh1/1/" target="_blank">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Pizzaria</div>
-                                    <p class="mb-0">This is a nice order calulator for your pizza order and delvery amount</p>
+                                    <div class="h2">Pizzeria</div>
+                                    <p class="mb-0">This is a nice order calculator for your pizza order and delivery amount</p>
                                 </div>
                             </div>
                             <img class="img-fluid-lemonade" src="assets/img/Projects_img/pizza.png" alt="..." />
@@ -169,8 +169,8 @@
                         <a class="portfolio-item" href="https://jsfiddle.net/Celirous/mkr8bdwo/6/" target="_blank">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Lemoande Stand</div>
-                                    <p class="mb-0">This program pulls the weather for you and helps you calculate the amonth of lemonade you can sell on that week!</p>
+                                    <div class="h2">Lemonade Stand</div>
+                                    <p class="mb-0">This program pulls the weather for you and helps you calculate the amount of lemonade you can sell on that week!</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/Projects_img/blue lemonade stand.png" alt="..." />
